--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,7 @@
 <body>
 <h1>Girl Scouts Website</h1>
 <p>Welcome!</p>
+<h3>{{ random_quote }}</h3>
+<img src="{{url_for('static', filename=random_image)}}" />
 </body>
 </html>
